--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,10 @@
+@import "variables.scss";
+
 @import "blocks/accordion.scss";
 @import "blocks/tab.scss";
 @import "blocks/mask-hover.scss";
+@import "blocks/check-radio.scss";
+@import "blocks/menu-icon.scss";
+@import "blocks/menu-left.scss";
 
 @import "global/scaffolding.scss";
