--- a/sass/blocks/tab.scss
+++ b/sass/blocks/tab.scss
@@ -33,7 +33,7 @@ label {
 
 .content > article {
     display: none;
-	position: absolute;
+//	position: absolute;
     padding: 50px;
     border-top: 5px solid #c8e124;
     top: 0;
