--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -2,8 +2,9 @@ body {
     background: url('../img/brick_5.jpg') 0 0 no-repeat;
 }
 
-.wrapper {
+.center {
 	max-width: 500px;
+    margin: 0 auto;
 }
 
 li {
