--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "blocks/accordion.scss";
 @import "blocks/tab.scss";
 @import "blocks/mask-hover.scss";
+@import "blocks/menu-icon.scss";
 
 @import "global/scaffolding.scss";
