--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,8 +7,10 @@
 @import "blocks/check-radio.scss";
 @import "blocks/menu-icon.scss";
 @import "blocks/menu-left.scss";
-@import "blocks/menu-left-2.scss";
+//@import "blocks/menu-left-2.scss";
 @import "blocks/anim-search.scss";
 @import "blocks/menu-fixed.scss";
+@import "blocks/menu-right.scss";
+@import "blocks/img-pseudo.scss";
 
 @import "global/scaffolding.scss";
