--- a/sass/blocks/img-pseudo.scss
+++ b/sass/blocks/img-pseudo.scss
@@ -1,60 +1,75 @@
 .images {
     text-align: center;
-    &__list {
-        
-    }
+    &__list {}
     &__item {
         position: relative;
         display: inline-block;
         margin-left: -4px;
         margin-top: -4px;
-        transition: .3s;
+        transition: all .3s;
         &::before {
             position: absolute;
-            content: '';
-            margin-left: -15px;
-            top: 75px;
-            left: 50%;
-            width: 20px;
-            height: 2px;
-            background: #fff;
+            content: '\f21e';
+            top: 46%;
+            left: 46%;
+            z-index: 100;
+            font-family: "FontAwesome";
+            color: red;
             opacity: 0;
+            transition: all .3s;
         }
-        &::after {
-            position: absolute;
-            content: '';
-            margin-left: -15px;
-            top: 75px;
-            left: 50%;
-            width: 20px;
-            height: 2px;
-            background: #fff;
-            transform: rotate(90deg);
-            opacity: 0;
+        &:hover::before {
+            opacity: 1;
         }
-        &:hover {
-            &::before
-            &::after {
-                opacity: 1;
+        //        &::before {
+        //            position: absolute;
+        //            content: '';
+        //            margin-left: -15px;
+        //            top: 75px;
+        //            left: 50%;
+        //            width: 20px;
+        //            height: 2px;
+        //            background: #fff;
+        //            opacity: 0;
+        //            z-index: 10;
+        //            transition: all .3s;
+        //        }
+        //        &::after {
+        //            position: absolute;
+        //            content: '';
+        //            margin-left: -15px;
+        //            top: 75px;
+        //            left: 50%;
+        //            width: 20px;
+        //            height: 2px;
+        //            background: #fff;
+        //            transform: rotate(90deg);
+        //            opacity: 0;
+        //            z-index: 10;
+        //            transition: all .3s;
+        //        }
+        //        &:hover::before,
+        //        &:hover::after {
+        //            opacity: 1;
+        //        }
+        a {
+            position: relative;
+            display: block;
+            &::before {
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 97.5%;
+                top: 0;
+                left: 0;
+                background: #000;
+                z-index: 1;
+                opacity: 0;
+                transition: all .3s;
+            }
+            &:hover::before {
+                opacity: .5;
             }
         }
     }
-    a {
-        position: relative;
-        display: block;
-        &::before {
-            position: absolute;
-            content: '';
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background: #000;
-            z-index: 1;
-            opacity: 0;
-        }
-    }
-        &:hover {
-                opacity: .3;
-            }
 }
