--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,5 +12,7 @@
 @import "blocks/menu-fixed.scss";
 @import "blocks/menu-right.scss";
 @import "blocks/img-pseudo.scss";
+@import "blocks/navigation.scss";
+@import "blocks/site-search.scss";
 
 @import "global/scaffolding.scss";
