--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,5 +14,6 @@
 @import "blocks/img-pseudo.scss";
 @import "blocks/navigation.scss";
 @import "blocks/site-search.scss";
+@import "blocks/content-slider.scss";
 
 @import "global/scaffolding.scss";
