--- a/sass/blocks/menu-right.scss
+++ b/sass/blocks/menu-right.scss
@@ -11,7 +11,7 @@
         margin-top: 60px;
         right: -2000px; // координаты для правильного позиционирования 
         top: 0; // координаты для правильного позиционирования 
-        width: 100%; // основной момент --- ширина 0
+        width: 100%;
         height: 450px;
         overflow-x: hidden;
         z-index: 1; // меню над текстом
