--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,5 +16,6 @@
 @import "blocks/site-search.scss";
 @import "blocks/content-slider.scss";
 @import "blocks/vert-slider.scss";
+@import "blocks/bxslider.scss";
 
 @import "global/scaffolding.scss";
