--- a/sass/blocks/content-slider.scss
+++ b/sass/blocks/content-slider.scss
@@ -28,7 +28,10 @@
             padding: 0 15px;
             font-size: 14px;
             overflow: hidden;
-//            text-overflow: ellipsis;
+            overflow-y: hidden;
+            text-overflow: ellipsis;
+//            white-space: pre-wrap;
+//            word-wrap: break-word;
 //            white-space: pre-wrap;
         }
     }
