--- a/sass/blocks/bg-attach.scss
+++ b/sass/blocks/bg-attach.scss
@@ -19,10 +19,10 @@
         padding: 10px;
         margin: 0 auto;
         text-align: center;
-        &_red {
+        &._red {
             position: relative;
-            background: red;
-            color: red;
+//            background: red;
+//            color: red;
             z-index: 1;
         }
     }
@@ -31,7 +31,6 @@
         background: transparent;
     }
     &__bottom {
-//        height: 100%;
         background: #605b86;
     }
 }
