--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,5 +18,6 @@
 @import "blocks/vert-slider.scss";
 @import "blocks/bxslider.scss";
 @import "blocks/bg-attach.scss";
+@import "blocks/hd-slider.scss";
 
 @import "global/scaffolding.scss";
