--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -3,6 +3,8 @@ body {
     background: #e1e1e1;
     width: 100%;
     height: 100%;
+    font-family: 'Roboto';
+    font-weight: 400;
 }
 
 .center {
