--- a/sass/blocks/select.scss
+++ b/sass/blocks/select.scss
@@ -1,18 +1,26 @@
 .select {
+    width: 600px;
+    margin: 50px auto;
     &__box {
         display: inline-block;
         width: 170px;
+        margin-right: 30px;
         vertical-align: top;
     }
-    &__choice {
+    &__doors,
+    &__material{
         display: block;
         cursor: pointer;
         background-image: url(../img/sprites/arrows.png);
         background-position: 100% 5px;
         background-repeat: no-repeat;
     }
-    &__list {
+    &__list-1,
+    &__list-2{
         display: none;
+        li {
+            padding: 5px;
+        }
     }
 }
 
