--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,5 +22,6 @@
 @import "blocks/hd-slider.scss";
 @import "blocks/select.scss";
 @import "blocks/language.scss";
+@import "blocks/goods.scss";
 
 @import "global/scaffolding.scss";
