--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,5 +23,6 @@
 @import "blocks/select.scss";
 @import "blocks/language.scss";
 @import "blocks/goods.scss";
+@import "blocks/sticky-header.scss";
 
 @import "global/scaffolding.scss";
