--- a/sass/blocks/goods.scss
+++ b/sass/blocks/goods.scss
@@ -2,9 +2,21 @@
     &-nav {
         display: inline-block;
         width: 30%;
-        height: 100%;
+        height: 500px;
         vertical-align: top;
         background: #9f9e9d;
+        &__list {
+            padding-left: 20px;
+        li {
+            margin: 10px 0;
+            a {
+                color: #454545;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
     }
     &-content {
         position: relative;
@@ -18,11 +30,15 @@
 
 // STYLES FOR PHONES BLOCK
 
-.phones {
+.phones,
+.tablet,
+.gadget{
     display: none;
     position: absolute;
+    width: 613px;
+    height: 350px;
     top: 5%;
-    left: 41%;
+    left: 39%;
     &__col-1,
     &__col-2,
     &__col-3, 
@@ -31,6 +47,17 @@
         width: 22%;
         vertical-align: top;
     }
+}
+.phones {
+    background: #458c00;
+}
+
+.tablet {
+    background: #5c50ff;
+}
+
+.gadget {
+    background: #50fdff;
 }
 
 .js-display {
