--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,5 +24,6 @@
 @import "blocks/language.scss";
 @import "blocks/goods.scss";
 @import "blocks/sticky-header.scss";
+@import "blocks/left-nav.scss";
 
 @import "global/scaffolding.scss";
