--- a/sass/blocks/sticky-header.scss
+++ b/sass/blocks/sticky-header.scss
@@ -1,22 +1,35 @@
 .header {
-//    position: fixed;
-    width: 100%;
-    height: 110px;
-    text-align: center;
+//    width: 900px;
+    height: 100px;
+    margin: 0 auto;
+    line-height: 100px;
     background: gray;
-//    border-top: 1px solid #000;
-//    transition: all 0.4s ease;
+    transition: all 0.4s ease;
     &__logo {
         display: inline-block;
-//        width: 30%;
-//        height: 100px;
-//        background: blue;
+        margin-right: 10%;
+        vertical-align: middle;
+        line-height: normal;
     }
     &__nav {
         display: inline-block;
-//        width: 65%;
-//        height: 100px;
-//        background: green;
+        vertical-align: middle;
+        line-height: normal;
+    }
+    &__list {
+        li {
+            @include list-inl(0 10px);
+            a {
+                display: block;
+                padding: 0 10px;
+                font-size: 16px;
+                line-height: 99px;
+                color: #fff;
+                &:hover {
+                    background: #58446e;
+                }
+            }
+        }
     }
     &__demo {
         padding-top: 150px;
@@ -28,16 +41,20 @@
 
 p {
         width: 500px;
-        margin: 0 auto;
+        margin: 50px auto!important;
         text-align: center;
     }
 
 .sticky {
     position: fixed;
-//    width: 50px;
+    width: 100%;
     height: 50px;
-//    left: 3%;
-//    top: 5%;
+    top: 0;
     background: rgba(255, 255, 255, 0.7);
-//    transition: all 0.9s ease;
+    .header__logo {
+        display: none;
+    }
+    .header__list {
+        display: none;
+    }
 }
