--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -1,10 +1,12 @@
-body {
+body, html {
 //    background: url('../img/brick_5.jpg') 0 0 no-repeat;
     background: #e1e1e1;
-    width: 100%;
-    height: 100%;
+//    width: 100%;
+//    height: 100%;
+    margin: 0;
     font-family: 'Roboto';
     font-weight: 400;
+//    overflow: hidden;
 }
 
 .center {
