--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -1,12 +1,8 @@
 body, html {
-//    background: url('../img/brick_5.jpg') 0 0 no-repeat;
     background: #e1e1e1;
-//    width: 100%;
-//    height: 100%;
     margin: 0;
     font-family: 'Roboto';
     font-weight: 400;
-//    overflow: hidden;
 }
 
 .center {
@@ -25,14 +21,15 @@ ul, h1, h2, h3, h4, h5, h6, p {
 
 a {
     text-decoration: none;
+    color: #333333;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .title {
 	padding: 15px;
     text-align: center;
-    &--mt {
-//        margin-top: 330px;
-    }
 }
 
 .icon-arr-down {
