--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,5 +25,6 @@
 @import "blocks/goods.scss";
 @import "blocks/sticky-header.scss";
 @import "blocks/left-nav.scss";
+@import "blocks/tooltip.scss";
 
 @import "global/scaffolding.scss";
