--- a/sass/blocks/sticky-header.scss
+++ b/sass/blocks/sticky-header.scss
@@ -1,5 +1,4 @@
 .header {
-//    width: 900px;
     height: 100px;
     margin: 0 auto;
     line-height: 100px;
@@ -40,21 +39,34 @@
 }
 
 p {
-        width: 500px;
-        margin: 50px auto!important;
-        text-align: center;
-    }
+    width: 500px;
+    margin: 50px auto!important;
+    text-align: center;
+}
 
-.sticky {
+.sticky { // класс .sticky нужно задать для контента, а не обертки. в этом случае для .header__nav
     position: fixed;
     width: 100%;
     height: 50px;
+    left: 0;
     top: 0;
     background: rgba(255, 255, 255, 0.7);
+    transition: .3s;
     .header__logo {
         display: none;
     }
-    .header__list {
-        display: none;
+    .header {
+        text-align: center;
+        &__nav {
+            vertical-align: top;
+        }
+        &__list {
+            text-align: center;
+            a {
+                display: inline-block;
+                line-height: 50px;
+                color: #000;
+            }
+        }
     }
 }
