--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,5 +26,7 @@
 @import "blocks/sticky-header.scss";
 @import "blocks/left-nav.scss";
 @import "blocks/tooltip.scss";
+@import "blocks/sticky-footer.scss";
+@import "blocks/overview-card.scss";
 
 @import "global/scaffolding.scss";
