--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -1,6 +1,9 @@
-body, html {
+html {
     height: 100%;
-    background: #e1e1e1;
+}
+body {
+    height: 100%;
+    background: white;
     margin: 0;
     font-family: 'Roboto';
     font-weight: 400;
