--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,5 +30,6 @@
 @import "blocks/overview-card.scss";
 @import "blocks/first-screen.scss";
 @import "blocks/button-test.scss";
+@import "blocks/nav.scss";
 
 @import "global/scaffolding.scss";
