--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -1,8 +1,8 @@
 html {
-    height: 100%;
+//    height: 100%;
 }
 body {
-    height: 100%;
+//    height: 100%;
     background: white;
     margin: 0;
     font-family: 'Roboto';
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-    height: 100%;
+//    height: 100%;
 }
 
 .center {
