--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,5 +31,6 @@
 @import "blocks/first-screen.scss";
 @import "blocks/button-test.scss";
 @import "blocks/nav.scss";
+@import "blocks/video_bg.scss";
 
 @import "global/scaffolding.scss";
