--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,5 +28,7 @@
 @import "blocks/tooltip.scss";
 @import "blocks/sticky-footer.scss";
 @import "blocks/overview-card.scss";
+@import "blocks/form.scss";
+@import "blocks/footer-test.scss";
 
 @import "global/scaffolding.scss";
