--- a/sass/blocks/sticky-header.scss
+++ b/sass/blocks/sticky-header.scss
@@ -39,9 +39,9 @@
 }
 
 p {
-    width: 500px;
-    margin: 50px auto!important;
-    text-align: center;
+//    width: 500px;
+//    margin: 50px auto!important;
+//    text-align: center;
 }
 
 .sticky { // класс .sticky нужно задать для контента, а не обертки. в этом случае для .header__nav
