--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,5 +34,6 @@
 @import "blocks/button-test.scss";
 @import "blocks/nav.scss";
 @import "blocks/video_bg.scss";
+@import "blocks/products.scss";
 
 @import "global/scaffolding.scss";
