--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -3,7 +3,7 @@ html {
 }
 body {
 //    height: 100%;
-    background: white;
+//    background: white;
     margin: 0;
     font-family: 'Roboto';
     font-weight: 400;
