--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -32,7 +32,7 @@ a {
     text-decoration: none;
     color: #333333;
     &:hover {
-        text-decoration: underline;
+        text-decoration: none;
     }
 }
 
