--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -1,12 +1,11 @@
 html {
-//    height: 100%;
+    font-size: 14px;
 }
 body {
-//    height: 100%;
-//    background: white;
+    background: white;
     margin: 0;
     font-family: 'Roboto';
-    font-weight: 400;
+    font-weight: normal;
 }
 
 main {
