--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@
 @import "blocks/video_bg.scss";
 @import "blocks/products.scss";
 @import "blocks/buttons.scss";
+@import "blocks/radiolight.scss";
 
 @import "global/scaffolding.scss";
 @import "fonts/font-awesome/scss/font-awesome.scss";
