--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,8 @@
 @import "blocks/video_bg.scss";
 @import "blocks/products.scss";
 @import "blocks/buttons.scss";
+@import "blocks/advantages.scss";
+@import "blocks/fluid-nav.scss";
 
 @import "global/scaffolding.scss";
 @import "fonts/font-awesome/scss/font-awesome.scss";
