--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,7 @@
 @import "blocks/advantages.scss";
 @import "blocks/fluid-nav.scss";
 @import "blocks/radiolight.scss";
+@import "blocks/icons.scss";
 
 @import "global/scaffolding.scss";
 @import "fonts/font-awesome/scss/font-awesome.scss";
