--- a/sass/blocks/icons.scss
+++ b/sass/blocks/icons.scss
@@ -1,6 +1,7 @@
 .icons-main {
     text-align: center;
 }
+
 .icons {
     display: inline-block;
     &__block {
@@ -36,9 +37,21 @@
         text-align: center;
         &:hover {
             .round-ic__thumb {
-            &::before {
-                width: 100%;
-            }
+                //                background: #000;
+                &::before {
+                    border-top: 5px solid#0eb7da;
+                    border-right: 5px solid #0eb7da;
+                    border-left: 5px solid #0eb7da;
+                    border-bottom: 5px solid #0eb7da;
+                    transition: border-left-color 0.40s linear 0.1s, border-top-color 0.50s linear 0.2s,  border-right-color 0.60s linear 0.3s, border-bottom-color 0.70s linear 0.4s;
+                }
+                &::after {
+//                    border-bottom: 2px solid red;
+//                    border-left: 2px solid red;
+//                    border-right-width: 2px;
+//                    transform: rotate(270deg);
+//                    transition: transform 0.4s linear 0s, border-left-width 0s linear 0.35s;
+                }
             }
         }
     }
@@ -48,21 +61,28 @@
         margin: 0 auto;
         width: 100px;
         height: 100px;
-        border-radius: 50%;
-        background: rgba(255,255,255, .3);
+        border-radius: 100%;
+        background: rgba(255, 255, 255, .3);
         border: 1px solid transparent;
         transition: all 1s;
         &::before {
             position: absolute;
             content: '';
+            left: -6px;
+            top: -6px;
+            width: 100%;
+            height: 100%;
+            border: 2px solid transparent;
+            border-radius: 100%;
+        }
+        &::after {
+            position: absolute;
+            content: '';
+            width: 100%;
+            height: 100%;
             left: 0;
             top: 0;
-            width: 0;
-//            height: 100px;
-//            border-radius: 50%;
-            height: 1px;
-            background: blue;
-            transition: all 1s;
+            border-radius: 100%;
         }
     }
 }
