--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,8 @@
 @import "blocks/fluid-nav.scss";
 @import "blocks/radiolight.scss";
 @import "blocks/icons.scss";
+@import "blocks/spin-circle.scss";
+@import "blocks/border-hover.scss";
 
 @import "global/scaffolding.scss";
 @import "fonts/font-awesome/scss/font-awesome.scss";
