--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,2 +1,12 @@
 $mobile: "(max-width: 767px)";
 $desktop: "(min-width: 551px)";
+
+$background: #fefefe;
+$text: #4b507a;
+
+$cyan: #60daaa;
+$yellow: #fbca67;
+$orange: #ff8a30;
+$red: #f45e61;
+$purple: #6477b9;
+$blue: #0eb7da;
