--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,9 @@
 @import "blocks/icons.scss";
 @import "blocks/spin-circle.scss";
 @import "blocks/border-hover.scss";
+@import "blocks/portfolio.scss";
+@import "blocks/headers.scss";
+@import "blocks/nice-buttons.scss";
 
 @import "global/scaffolding.scss";
 @import "fonts/font-awesome/scss/font-awesome.scss";
